--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -15,3 +15,9 @@ code {
 .tCalendarsHcbBody{
   display: flex;
 }
+
+.customFields{
+    color: rgba(0,0,0,.87);
+    display: flex;
+    padding-top: 16px;
+}
